# simgen

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  connect.py  docker-compose.yaml  index.html  launch_mol_gen_array  mkdocs.yml  pyproject.toml  search.html  temp.ipynb
airss_baseline/: calculators.py  run_airss_generation.py  run_hot_airss_generation.py  utils.py
docs/: index.md
docs/tutorials/: zndraw_integration.md
energy_model/: diffusion_tools.py  training_tools.py
moldiff/: analysis.py  atoms_cleanup.py  calculators.py  diffusion_tools.py  element_swapping.py  generation_utils.py  hydrogenation.py  hydrogenation_deterministic.py  integrators.py  manifolds.py  networks.py  particle_filtering.py  sampling.py  soap_similarity.py  temperature_annealing.py  utils.py  zndraw.py
moldiff/energy_model/: diffusion_tools.py
moldiff_server/: __init__.py  cli.py  data.py  endpoints.py  main.py  ray_app.py  utils.py
moldiff_zndraw/: __init__.py  cli.py  data.py  endpoints.py  local_server.py  main.py  setup_defaults.py  utils.py  zndraw.py
scripts/: evaluate_generated_data.py  generate_array_submission_script.py  generate_energy_profile_particle_filter.py  generate_linkers.py  generate_mols.py  generate_mols_cli.py  generate_mols_energy_model.py  generate_mols_particle_filter.py  train_energy_diffusion_mace.py
scripts/energy_model/: data_split.ipynb  energy_profiles.ipynb  find_best_sampler_params.py  generate_mols_energy_model.py  sweep_sampler_params.py  train_energy_diffusion_mace.py
scripts/paper_examples/: generate_line.py  generate_macrocycles.py  generate_multivar_gaussian.py  generate_with_untrained_model.py  qm9_diversity.py  run_OA_experiment.py
search/: search_index.json
simgen/: analysis.py  atoms_cleanup.py  calculators.py  element_swapping.py  generation_utils.py  hydrogenation.py  hydrogenation_deterministic.py  integrators.py  manifolds.py  particle_filtering.py  sascrorer.py  temperature_annealing.py  utils.py
simgen_zndraw/: __init__.py  cli.py  data.py  endpoints.py  local_server.py  main.py  utils.py
src/: sampling.py  utils.py
tests/: conftest.py  fixtures.py  test_airss_calculators.py  test_analysis.py  test_atoms_cleanup.py  test_calculators.py  test_element_swapping.py  test_generation_utils.py  test_hydrogenation.py  test_loading_pretrained_mace.py  test_mace_similarity_calculator.py  test_mace_similarity_scorer.py  test_manifolds.py  test_particle_filtering.py  test_sampling.py  test_similarity_scorer.py  test_soap_scorer.py  test_temperature_annealing.py  test_utils.py  test_zndraw.py
(+1 files in other folders)
