[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moldiff"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rokas Elijošius", email = "re344@cam.ac.uk" }]
dependencies = [
    "ase>=3.22.1",
    "einops>=0.6.1",
    "fire>=0.5.0",
    "frozendict>=2.3.7",
    "typer[all]>=0.7.0",
    "mace-models>=0.1.1",
    "hydromace @ git+https://github.com/RokasEl/hydromace/",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moldiff", "energy_model", "moldiff_zndraw", "airss_baseline"]
namespaces = false



[project.scripts]
simgen = "moldiff_zndraw.cli:cli_app"
