[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simgen"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rokas Elijošius", email = "re344@cam.ac.uk" }]
dependencies = [
    "ase>=3.22.1",
    "einops>=0.6.1",
    "fire>=0.5.0",
    "frozendict>=2.3.7",
    "typer[all]>=0.7.0",
    "decorator",
    "mace-models>=0.1.2",
    "hydromace",
    "znframe",
    "zndraw",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simgen", "energy_model", "simgen_zndraw", "airss_baseline"]
namespaces = false

[project.scripts]
simgen = "simgen_zndraw.cli:cli_app"

[project.optional-dependencies]
all = [
    "rdkit>=2023.9.4"
]
